# icarus

./: .env.example  .gitignore  CLAUDE.md  README.md  STRATEGY.md  TESTING.md  docker-compose.yml  railway.toml  strategy.md
py-engine/: Dockerfile  Dockerfile.prod  main.py  pyproject.toml
py-engine/ai/: __init__.py  code_gen.py  decision_engine.py  insight_synthesis.py
py-engine/data/: defi_metrics.py  gas_monitor.py  price_feed.py  reconciliation.py  redis_client.py
py-engine/db/: __init__.py  migrations.py  models.py  repository.py
py-engine/harness/: __init__.py  approval_gates.py  command_listener.py  diagnostic_mode.py  startup_recovery.py  state_manager.py
py-engine/ml/: __init__.py  feature_engineering.py  gas_predictor.py
py-engine/monitoring/: __init__.py  anomaly_detection.py  discord_alerts.py  logger.py  state_publisher.py
py-engine/portfolio/: __init__.py  allocator.py  position_tracker.py  rebalancer.py
py-engine/reporting/: __init__.py  pnl_attribution.py  tax_engine.py
py-engine/risk/: __init__.py  drawdown_breaker.py  exposure_limits.py  gas_spike_breaker.py  oracle_guard.py  position_loss_limit.py  tvl_monitor.py  tx_failure_monitor.py
py-engine/strategies/: __init__.py  aave_lending.py  aerodrome_lp.py  flash_loan_arb.py  ingestion.py  lido_staking.py  lifecycle_manager.py  manager.py  rate_arb.py  uniswap_v3_lp.py  yield_farming.py
py-engine/tests/: test_aave_lending.py  test_aerodrome_lp.py  test_allocator.py  test_anomaly_detection.py  test_code_gen.py  test_command_listener.py  test_database.py  test_database_infra005.py  (+41 more)
(+266 files in other folders)
