[project]
name = "py-engine"
version = "0.1.0"
description = "Crypto agent decision engine — strategies, risk management, portfolio allocation"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.2.1",
    "pandas>=2.2.3",
    "numpy>=2.2.2",
    "python-dotenv>=1.0.1",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "pytest-asyncio>=0.25.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
