[project]
name = "py-engine"
version = "0.1.0"
description = "Crypto agent decision engine — strategies, risk management, portfolio allocation"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.2.1",
    "pandas>=2.2.3",
    "numpy>=2.2.2",
    "python-dotenv>=1.0.1",
    "jsonschema>=4.23.0",
    "watchfiles>=1.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "pytest-asyncio>=0.25.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "D"]
ignore = ["D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D104", "D205", "D209"]
"__init__.py" = ["D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
